@@ -1,5 +1,10 @@
 2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/loader/i386/bsd.c (grub_cmd_netbsd): Provide default serial
+	parameters.
+
+2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/lib/arg.c (grub_arg_parse): Fix treating of all commands as
 	if they were BSD-style.
 
